# Shorty

./: README.md  VideoSlicer.spec  apply_theme.py  build.py  create_installer.sh  main.py  pyproject.toml  requirements.txt
niger/VideoSlicer_Installer/: install.sh
